# multi-agent-text2sql

./: .gitignore  main.py  pyproject.toml
db/: sessions.db  vault.db
scripts/: 01_ddl.sql  02_data.sql  03_ddl_vault.sql
src/database/: generate_database.py  generate_vault_database.py
src/multiagent/: agent.py  agent_status_stream.py  agent_stream.py  data_tools.py  mini_agent.py  status_streaming.py  streamlit_agent_config.py  streamlit_ui.py
src/tests/: test_chat_agent.py  test_vault_conn.py
src/vault/: main.py  models.py  server.py  utils.py  vault_tools.py
src/vault/lib/: connection.py  models.py  secret_tools.py  user_tools.py  vault_tools.py
src/vault/routes/: secrets.py  users.py  vaults.py
