[project]
name = "multi-agent-text2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "bcrypt>=5.0.0",
    "duckdb>=1.4.3",
    "fastapi>=0.124.4",
    "fastmcp>=2.14.0",
    "fernet>=1.0.1",
    "openai>=2.9.0",
    "openai-agents>=0.6.2",
    "uvicorn>=0.38.0",
]
